--- a/package.json
+++ b/package.json
@@ -88,6 +88,7 @@
 		"globals": "16.2.0",
 		"typescript": "5.8.3",
 		"typescript-eslint": "8.35.0",
+		"vercel": "^50.9.1",
 		"vite": "7.0.0"
 	}
 }
