--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
 		"@radix-ui/react-toggle": "1.1.9",
 		"@radix-ui/react-toggle-group": "1.1.10",
 		"@radix-ui/react-tooltip": "1.2.7",
+		"@radix-ui/react-visually-hidden": "^1.2.4",
 		"@tailwindcss/vite": "4.1.10",
 		"class-variance-authority": "0.7.1",
 		"clsx": "2.1.1",
